# ox_jwt

./: .gitignore  LICENSE  README.org  makefile  pyproject.toml  slides.org
.github/workflows/: docker-build-test.yml
docs/: custom.css  custom_big_font.css  custom_highlight.js  index.html  slides.html  slides.org  slides_big_font.html  slides_big_font.org
nginx/: Dockerfile  makefile  start.sh
nginx/conf.d/: example.conf
nginx/ojwt/: .dir-locals.el  .eslintrc.js  .gitignore  README.org  auth_tools.js  auth_tools.test.js  jest.config.js  main.js  makefile  my_keys.js  ojwt.js  otools.js  package-lock.json  package.json
src/ox_jwt/: __init__.py  app.py  test_app.py
